--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<topbanner></topbanner>
+<topbanner [title] = "title"></topbanner>
 <div class="row">
   <div class="column">
     <location></location>
@@ -10,4 +10,4 @@
     <clima></clima>
   </div>
 </div>
-<my-footer></my-footer>
+<my-footer [titleHijo] = "title"></my-footer><!--Se suele poner siempre lo mismo, pero los corchetes son el hijo-->
