--- a/src/app/temperatura/temperatura.component.html
+++ b/src/app/temperatura/temperatura.component.html
@@ -3,4 +3,8 @@ TEMP (Celsius)
     <h1>{{ temp }} C</h1>
     <button on-click="resetTemperatura()" >Reset</button>
     <button (click)="resetTemperatura()" >Reset</button>
+
+    <button (click)="incrementarTemperatura()" >+</button>
+
+    <button (click)="decrementarTemperatura()" >-</button>
   </div>
